    + Fixes the build on PPC when using GCC 4.4.
  * debian/patches/disable_unavailable_cpu_optimizations_r133647.dpatch:
    + Disable CPU optimizations which might be unavailable (like SSE2 on
      Pentium 3).
  * debian/patches/fix_sparc_support_r134797.patch:
    + Fixes the hang for all applications when running on SPARC.
      (Closes: #531566)

 -- Mirco Bauer <meebey@debian.org>  Mon, 25 May 2009 20:46:12 +0200

mono (2.4+dfsg-2) unstable; urgency=low

  [ Jo Shields ]
  * debian/rules:
    + Implement workaround to force removal of /usr/share/doc symlinks
      on Ubuntu systems when upgrading from pre-2.4 packages
  * debian/control:
    + Add dependency on lsb-release to allow distro detection

  [ Mirco Bauer ]
  * Upload to unstable.
  * debian/update-shlibs.local.sh:
    + Fixed shlibs line of libMonoPosixHelper, was causing incorrect
      dependencies on libmono0 instead of mono-runtime.
    + Added shlibs line for libMonoSupportW.
  * debian/monodoc-base.install:
    + Added missing monodoc development symlink.
  * debian/mono-1.0-devel.install
    debian/mono-2.0-devel.install:
    + Added installutil.exe.
  * debian/mono-csharp-shell.install:
    + Added missing Mono.CSharp development symlink.
  * debian/libmono-messaging2.0-cil.install:
    + Really install library and development symlink of Mono.Messaging.
  * debian/libmono-management2.0-cil.install:
    + Added missing Mono.Management development symlink.
  * debian/mono-devel.install:
    + Install mcs mo-files.

 -- Mirco Bauer <meebey@debian.org>  Sun, 24 May 2009 15:23:14 +0200

mono (2.4+dfsg-1) experimental; urgency=low

  * New upstream release.
    + For release highlights see the NEWS.Debian file
  * debian/NEWS:
    + Updated for Mono 2.4, Mono 2.2 and Mono 2.0.
  * DFSG edition of Mono 2.4 as the source taball contained a binary that is
    not part of the bootstrapping process (docs/AgilityPack.dll) and is CC
    Share-alike 2.5 licensed (non-free). Also it contained non-free